@@ -201,8 +201,33 @@ gdb_test_multiple "info files" $test {
     }
 }
 
+set test "quit with a process"
+gdb_test_multiple "quit" $test {
+    -re "A debugging session is active.\r\n.*\r\nQuit anyway\\? \\(y or n\\) $" {
+	pass $test
+	gdb_test "n" {Not confirmed\.} "quit with processes: n"
+    }
+}
+
 gdb_exit
 
+# Verify there is no question if only a core file is loaded.
+
+gdb_start
+gdb_test "core-file $corefile" "Core was generated by .*" "no question: load core"
+
+set test "quit with a core file"
+gdb_test_multiple "quit" $test {
+    -re "A debugging session is active.\r\n.*\r\nQuit anyway\\? \\(y or n\\) $" {
+	fail $test
+	gdb_test "n" {Not confirmed\.} "quit with processes: n"
+    }
+    eof {
+	pass $test
+    }
+}
+
+gdb_exit
 
 # Test an attach command will clear any loaded core file.
 
